k8s-promo001/livredor-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: livredor
  name: livredor
spec:
  replicas: 3
  selector:
    matchLabels:
      app: livredor
  strategy: {}
  template:
    metadata:
      labels:
        app: livredor
    spec:
      containers:
      - image: camarahamedy/livredor-ci:7a9c0c6f
        name: livredor-ci
        resources: {}
status: {}
