k8s-promo001/livredor-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: livredor
  labels:
    app: livredor
    promo: "001"
spec:
  containers:
    - name: livredor
      image: camarahamedy/livredor-ci:7a9c0c6f
      ports:
        - containerPort: 3000
