k8s-promo001/stagiaire.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stagiaire
spec:
  containers:
  - name: observateur
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
    volumeMounts:
    - name: config
      mountPath: /etc/boutique
  volumes:
  - name: config
    configMap:
      name: boutique-config
