k8s-promo001/cobaye.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cobaye
  labels:
    sante: cobaye
spec:
  containers:
  - name: patient
    image: busybox:1.36
    command: ["sh", "-c", "touch /tmp/vivant /tmp/pret; sleep 604800"]
    livenessProbe:
      exec:
        command: ["cat", "/tmp/vivant"]
      initialDelaySeconds: 5
      periodSeconds: 5
      failureThreshold: 2
    readinessProbe:
      exec:
        command: ["cat", "/tmp/pret"]
      periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: infirmerie
spec:
  selector:
    sante: cobaye
  ports:
  - port: 80
    targetPort: 8080
