k8s-promo001/livredor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livredor
spec:
  selector:
    app: livredor
  ports:
  - port: 80
    targetPort: 3000
